@@ -112,7 +112,7 @@ private extension StatsStore {
                                     latestDateToInclude: latestDateToInclude,
                                     quantity: quantity) { [weak self] (siteVisitStats, error) in
             guard let siteVisitStats = siteVisitStats else {
-                onCompletion(error)
+                onCompletion(error.flatMap({ SiteVisitStatsStoreError(error: $0) }))
                 return
             }
 
@@ -281,5 +281,42 @@ extension StatsStore {
         /// Default limit value for TopEarnerStats
         ///
         static let defaultTopEarnerStatsLimit: Int = 3
+    }
+}
+
+/// An error that occurs while fetching site visit stats.
+/// API documentation of possible errors:
+/// https://developer.wordpress.com/docs/api/1.1/get/sites/%24site/stats/
+///
+/// - statsModuleDisabled: Jetpack site stats module is disabled for the site.
+/// - unknown: other error cases.
+///
+public enum SiteVisitStatsStoreError: Error {
+    case statsModuleDisabled
+    case unknown
+
+    private enum ErrorIdentifiers {
+        static let invalidBlog: String = "invalid_blog"
+    }
+
+    private enum ErrorMessages {
+        static let statsModuleDisabled: String = "This blog does not have the Stats module enabled"
+    }
+
+    init(error: Error) {
+        guard let dotcomError = error as? DotcomError else {
+            self = .unknown
+            return
+        }
+        switch dotcomError {
+        case .unknown(let code, let message):
+            if code == ErrorIdentifiers.invalidBlog && message == ErrorMessages.statsModuleDisabled {
+                self = .statsModuleDisabled
+            } else {
+                self = .unknown
+            }
+        default:
+            self = .unknown
+        }
     }
 }
