@@ -1,6 +1,7 @@
 2.4
 -----
- 
+- bugfix: when Jetpack site stats module is turned off, the generic error toast is not shown to the user anymore.
+
 2.3
 -----
 - Improvement: improved Dynamic Type support in the body of the notification in the Notifications tab.
